1.0.0 / 2012-05-30

* Breaking changes

  * ActiveRecord::{Base.,Relation#}cohort returns an Arel::SelectManager, NOT another ActiveRecord::Relation. That means you can't call, for example, #count on it - you have to treat it like an ARel object.
  * Removed #cohort_constraint. It was confusing and indicated a problem with plain ol' #cohort.

0.4.0 / 2012-02-28

* renamed to cohort_analysis

* new, simplified syntax - see README.markdown

0.3.0 / 2012-02-27

* Now my_strategy = Person.strategy({:favorite_color => 'heliotrope', :birthdate => @date_range}, :importance => [:birthdate, :favorite_color]) will return a Arel::Nodes::Node which can be combined like Person.where(my_strategy.and("gender = 'male")) - it does NOT return a "scope" like before.

* Refactor to take advantage of ARel.

0.2.0

* No longer "flattens" or "sanitizes" characteristics by turning records into integer IDs, etc. You should pass in exactly what you would pass into a normal ActiveRecord relation/scope.

0.1.0

* First version!