@@ -14,22 +14,26 @@ module CohortAnalysis
       end
     end
 
-    class AlwaysTrue
-      class << self; def to_sql; '1 = 1'; end; end
+    module AlwaysTrue
+      def self.to_sql; '1 = 1' end
     end
-    class Impossible
-      class << self; def to_sql; '1 = 2'; end; end
+    module Impossible
+      def self.to_sql; '1 = 2' end
     end
 
     DEFAULT_STRATEGY = :big
 
-    attr_accessor :select_manager
+    attr_reader :select_manager
     attr_reader :original
     attr_reader :current
     attr_reader :minimum_size
+    attr_reader :table_name
+    attr_reader :table
 
     def initialize(select_manager, characteristics, options = {})
       @select_manager = select_manager
+      @table_name = select_manager.source.left.name
+      @table = Arel::Table.new table_name
       @original = characteristics.dup
       @current = characteristics.dup
       @minimum_size = options.fetch(:minimum_size, 1)
@@ -37,11 +41,14 @@ module CohortAnalysis
     end
 
     def final
-      return @final if @final
-      @final_mutex.synchronize do
-        return @final if @final
-        resolve!
-        @final
+      @final || if @final_mutex.try_lock
+        begin
+          @final ||= resolve!
+        ensure
+          @final_mutex.unlock
+        end
+      else
+        Impossible
       end
     end
 
@@ -49,16 +56,23 @@ module CohortAnalysis
       final.to_sql
     end
 
+    def ==(other)
+      other.is_a?(Strategy) and
+        table_name == other.table_name and
+        minimum_size = other.minimum_size and
+        original == other.original
+    end
+
     private
 
     # Recursively look for a scope that meets the characteristics and is at least <tt>minimum_size</tt>.
     def resolve!
       if original.empty?
-        @final = AlwaysTrue
+        AlwaysTrue
       elsif current.empty?
-        @final = Impossible
+        Impossible
       elsif count(current) >= minimum_size
-        @final = grasp(current).inject(:and)
+        Arel::Nodes::Grouping.new grasp(current).inject(:and)
       else
         reduce!
         resolve!
@@ -70,25 +84,28 @@ module CohortAnalysis
     end
 
     def count(subset)
-      merged_constraints = (select_manager.constraints + grasp(subset)).inject(nil) do |memo, constraint|
-        if (constraint.is_a?(Strategy) and constraint == self)# or (constraint.is_a?(Arel::Nodes::Grouping) and constraint.expr == self)
-          next memo
+      constraints = grasp subset
+
+      select_manager.constraints.each do |constraint|
+        if self == constraint
+          next
         end
-        if constraint.is_a?(String)
-          constraint = Arel::Nodes::Grouping.new(constraint)
+        if constraint.is_a? String
+          constraint = Arel::Nodes::Grouping.new constraint
         end
+        constraints << constraint
+      end
+
+      relation = constraints.inject(nil) do |memo, constraint|
         if memo
           memo.and(constraint)
         else
           constraint
         end
       end
-      sql = table.project('COUNT(*)').where(merged_constraints).to_sql
-      select_manager.engine.connection.select_value(sql).to_i
-    end
 
-    def table
-      select_manager.source.left
+      sql = table.dup.project('COUNT(*)').where(relation).to_sql
+      select_manager.engine.connection.select_value(sql).to_i
     end
   end
 end
