@@ -4,6 +4,9 @@ class Flight < ActiveRecord::Base
   col :origin
   col :dest
   col :year, :type => :integer
+  col :airline
+  col :origin_city
+  col :dest_city
 end
 Flight.auto_upgrade!
 
@@ -23,6 +26,10 @@ FactoryGirl.define do
 end
 
 shared_examples_for 'an adapter the provides #cohort' do
+  def moot_condition
+    Arel.sql('9 = 9')
+  end
+
   describe :cohort do
     it "finds the biggest set of records matching the characteristics" do
       FactoryGirl.create(:lax_ord)
@@ -40,26 +47,25 @@ shared_examples_for 'an adapter the provides #cohort' do
     end
 
     it "discards characteristics to maximize size until the minimum size is met" do
-      FactoryGirl.create(:lax_ord)
-      FactoryGirl.create(:lax_sfo)
+      a = FactoryGirl.create(:lax_ord)
+      b = FactoryGirl.create(:lax_sfo)
       cohort = model.cohort({:origin => 'LAX', :dest => 'SFO'}, :minimum_size => 2)
       assert_count 2, cohort
-      assert_constraint({:origin => 'LAX'}, cohort)
+      assert_members [a,b], cohort
     end
 
     it "returns an empty cohort (basically an impossible condition) unless the minimum size is set" do
       FactoryGirl.create(:lax_ord)
       cohort = model.cohort({:origin => 'LAX'}, :minimum_size => 2)
       assert_count 0, cohort
-      assert_constraint '1 = 2', cohort
     end
 
     it "discards characteristics in order until a minimum size is met" do
-      FactoryGirl.create(:lax_ord)
-      FactoryGirl.create(:lax_sfo)
+      a = FactoryGirl.create(:lax_ord)
+      b = FactoryGirl.create(:lax_sfo)
       cohort = model.cohort({:origin => 'LAX', :dest => 'MSN'}, :minimum_size => 2, :priority => [:origin, :dest])
       assert_count 2, cohort
-      assert_constraint({:origin => 'LAX'}, cohort)
+      assert_members [a,b], cohort
     end
 
     it "returns an empty cohort if discarding characteristics in order has that effect" do
@@ -67,7 +73,6 @@ shared_examples_for 'an adapter the provides #cohort' do
       FactoryGirl.create(:lax_sfo)
       cohort = model.cohort({:origin => 'LAX', :dest => 'MSN'}, :minimum_size => 2, :priority => [:dest, :origin])
       assert_count 0, cohort
-      assert_constraint('1 = 2', cohort)
     end
 
     it "obeys conditions already added" do
@@ -75,47 +80,46 @@ shared_examples_for 'an adapter the provides #cohort' do
       FactoryGirl.create(:lax_sfo, :year => 1900)
       FactoryGirl.create(:lax_sfo, :year => 2009)
       FactoryGirl.create(:ord_sfo, :year => 2009)
-      f_t = Arel::Table.new(:flights)
       year_is_2009 = f_t[:year].eq(2009)
 
-      assert_count 1, model.where(year_is_2009).cohort(:origin => 'LAX').where('9 = 9')
-      assert_count 1, model.where(year_is_2009).cohort(:origin => 'LAX', :dest => 'MSN').where('9 = 9')
+      assert_count 1, model.where(year_is_2009).cohort(:origin => 'LAX').where(moot_condition)
+      assert_count 1, model.where(year_is_2009).cohort(:origin => 'LAX', :dest => 'MSN').where(moot_condition)
 
-      assert_count 1, model.where(year_is_2009).cohort({:origin => 'LAX', :dest => 'MSN'}, :priority => [:origin, :dest]).where('9 = 9')
-      assert_count 0, model.where(year_is_2009).cohort({:origin => 'LAX', :dest => 'MSN'}, :priority => [:dest, :origin]).where('9 = 9')
+      assert_count 1, model.where(year_is_2009).cohort({:origin => 'LAX', :dest => 'MSN'}, :priority => [:origin, :dest]).where(moot_condition)
+      assert_count 0, model.where(year_is_2009).cohort({:origin => 'LAX', :dest => 'MSN'}, :priority => [:dest, :origin]).where(moot_condition)
 
-      assert_count 0, model.where(year_is_2009).cohort({:origin => 'LAX'}, :minimum_size => 2).where('9 = 9')
-      assert_count 0, model.where(year_is_2009).cohort({:origin => 'LAX', :dest => 'MSN'}, :minimum_size => 2).where('9 = 9')
+      assert_count 0, model.where(year_is_2009).cohort({:origin => 'LAX'}, :minimum_size => 2).where(moot_condition)
+      assert_count 0, model.where(year_is_2009).cohort({:origin => 'LAX', :dest => 'MSN'}, :minimum_size => 2).where(moot_condition)
       
 
-      assert_count 1, model.where(year_is_2009).cohort(:origin => 'LAX').where('9 = 9')
-      assert_count 1, model.where(year_is_2009).cohort(:origin => 'LAX', :dest => 'SFO').where('9 = 9')
+      assert_count 1, model.where(year_is_2009).cohort(:origin => 'LAX').where(moot_condition)
+      assert_count 1, model.where(year_is_2009).cohort(:origin => 'LAX', :dest => 'SFO').where(moot_condition)
 
-      assert_count 1, model.where(year_is_2009).cohort({:origin => 'LAX', :dest => 'SFO'}, :priority => [:origin, :dest]).where('9 = 9')
-      assert_count 1, model.where(year_is_2009).cohort({:origin => 'LAX', :dest => 'SFO'}, :priority => [:dest, :origin]).where('9 = 9')
+      assert_count 1, model.where(year_is_2009).cohort({:origin => 'LAX', :dest => 'SFO'}, :priority => [:origin, :dest]).where(moot_condition)
+      assert_count 1, model.where(year_is_2009).cohort({:origin => 'LAX', :dest => 'SFO'}, :priority => [:dest, :origin]).where(moot_condition)
 
-      assert_count 0, model.where(year_is_2009).cohort({:origin => 'LAX'}, :minimum_size => 2).where('9 = 9')
-      assert_count 2, model.where(year_is_2009).cohort({:origin => 'LAX', :dest => 'SFO'}, :minimum_size => 2).where('9 = 9')
-
-
-      assert_count 1, model.where(year_is_2009).cohort(:origin => 'LAX').where('9 = 9')
-      assert_count 1, model.where(year_is_2009).cohort(:origin => 'LAX', :dest => 'ORD').where('9 = 9')
-
-      assert_count 1, model.where(year_is_2009).cohort({:origin => 'LAX', :dest => 'ORD'}, :priority => [:origin, :dest]).where('9 = 9')
-      assert_count 0, model.where(year_is_2009).cohort({:origin => 'LAX', :dest => 'ORD'}, :priority => [:dest, :origin]).where('9 = 9')
-
-      assert_count 0, model.where(year_is_2009).cohort({:origin => 'LAX'}, :minimum_size => 2).where('9 = 9')
-      assert_count 0, model.where(year_is_2009).cohort({:origin => 'LAX', :dest => 'ORD'}, :minimum_size => 2).where('9 = 9')
+      assert_count 0, model.where(year_is_2009).cohort({:origin => 'LAX'}, :minimum_size => 2).where(moot_condition)
+      assert_count 2, model.where(year_is_2009).cohort({:origin => 'LAX', :dest => 'SFO'}, :minimum_size => 2).where(moot_condition)
 
 
-      assert_count 1, model.where(year_is_2009).cohort(:origin => 'ORD').where('9 = 9')
-      assert_count 1, model.where(year_is_2009).cohort(:origin => 'ORD', :dest => 'MSN').where('9 = 9')
+      assert_count 1, model.where(year_is_2009).cohort(:origin => 'LAX').where(moot_condition)
+      assert_count 1, model.where(year_is_2009).cohort(:origin => 'LAX', :dest => 'ORD').where(moot_condition)
 
-      assert_count 1, model.where(year_is_2009).cohort({:origin => 'ORD', :dest => 'MSN'}, :priority => [:origin, :dest]).where('9 = 9')
-      assert_count 0, model.where(year_is_2009).cohort({:origin => 'ORD', :dest => 'MSN'}, :priority => [:dest, :origin]).where('9 = 9')
+      assert_count 1, model.where(year_is_2009).cohort({:origin => 'LAX', :dest => 'ORD'}, :priority => [:origin, :dest]).where(moot_condition)
+      assert_count 0, model.where(year_is_2009).cohort({:origin => 'LAX', :dest => 'ORD'}, :priority => [:dest, :origin]).where(moot_condition)
 
-      assert_count 0, model.where(year_is_2009).cohort({:origin => 'ORD'}, :minimum_size => 2).where('9 = 9')
-      assert_count 0, model.where(year_is_2009).cohort({:origin => 'ORD', :dest => 'MSN'}, :minimum_size => 2).where('9 = 9')
+      assert_count 0, model.where(year_is_2009).cohort({:origin => 'LAX'}, :minimum_size => 2).where(moot_condition)
+      assert_count 0, model.where(year_is_2009).cohort({:origin => 'LAX', :dest => 'ORD'}, :minimum_size => 2).where(moot_condition)
+
+
+      assert_count 1, model.where(year_is_2009).cohort(:origin => 'ORD').where(moot_condition)
+      assert_count 1, model.where(year_is_2009).cohort(:origin => 'ORD', :dest => 'MSN').where(moot_condition)
+
+      assert_count 1, model.where(year_is_2009).cohort({:origin => 'ORD', :dest => 'MSN'}, :priority => [:origin, :dest]).where(moot_condition)
+      assert_count 0, model.where(year_is_2009).cohort({:origin => 'ORD', :dest => 'MSN'}, :priority => [:dest, :origin]).where(moot_condition)
+
+      assert_count 0, model.where(year_is_2009).cohort({:origin => 'ORD'}, :minimum_size => 2).where(moot_condition)
+      assert_count 0, model.where(year_is_2009).cohort({:origin => 'ORD', :dest => 'MSN'}, :minimum_size => 2).where(moot_condition)
     end
 
     it "carries over into conditions added later" do
@@ -123,62 +127,146 @@ shared_examples_for 'an adapter the provides #cohort' do
       FactoryGirl.create(:lax_sfo, :year => 1900)
       FactoryGirl.create(:lax_sfo, :year => 2009)
       FactoryGirl.create(:ord_sfo, :year => 2009)
-      f_t = Arel::Table.new(:flights)
       year_is_2009 = f_t[:year].eq(2009)
 
-      assert_count 1, model.where('9 = 9').cohort(:origin => 'LAX').where(year_is_2009)
-      assert_count 1, model.where('9 = 9').cohort(:origin => 'LAX', :dest => 'MSN').where(year_is_2009)
+      assert_count 1, model.where(moot_condition).cohort(:origin => 'LAX').where(year_is_2009)
+      assert_count 1, model.where(moot_condition).cohort(:origin => 'LAX', :dest => 'MSN').where(year_is_2009)
 
-      assert_count 1, model.where('9 = 9').cohort({:origin => 'LAX', :dest => 'MSN'}, :priority => [:origin, :dest]).where(year_is_2009)
-      assert_count 0, model.where('9 = 9').cohort({:origin => 'LAX', :dest => 'MSN'}, :priority => [:dest, :origin]).where(year_is_2009)
+      assert_count 1, model.where(moot_condition).cohort({:origin => 'LAX', :dest => 'MSN'}, :priority => [:origin, :dest]).where(year_is_2009)
+      assert_count 0, model.where(moot_condition).cohort({:origin => 'LAX', :dest => 'MSN'}, :priority => [:dest, :origin]).where(year_is_2009)
 
-      assert_count 0, model.where('9 = 9').cohort({:origin => 'LAX'}, :minimum_size => 2).where(year_is_2009)
-      assert_count 0, model.where('9 = 9').cohort({:origin => 'LAX', :dest => 'MSN'}, :minimum_size => 2).where(year_is_2009)
+      assert_count 0, model.where(moot_condition).cohort({:origin => 'LAX'}, :minimum_size => 2).where(year_is_2009)
+      assert_count 0, model.where(moot_condition).cohort({:origin => 'LAX', :dest => 'MSN'}, :minimum_size => 2).where(year_is_2009)
       
 
-      assert_count 1, model.where('9 = 9').cohort(:origin => 'LAX').where(year_is_2009)
-      assert_count 1, model.where('9 = 9').cohort(:origin => 'LAX', :dest => 'SFO').where(year_is_2009)
+      assert_count 1, model.where(moot_condition).cohort(:origin => 'LAX').where(year_is_2009)
+      assert_count 1, model.where(moot_condition).cohort(:origin => 'LAX', :dest => 'SFO').where(year_is_2009)
 
-      assert_count 1, model.where('9 = 9').cohort({:origin => 'LAX', :dest => 'SFO'}, :priority => [:origin, :dest]).where(year_is_2009)
-      assert_count 1, model.where('9 = 9').cohort({:origin => 'LAX', :dest => 'SFO'}, :priority => [:dest, :origin]).where(year_is_2009)
+      assert_count 1, model.where(moot_condition).cohort({:origin => 'LAX', :dest => 'SFO'}, :priority => [:origin, :dest]).where(year_is_2009)
+      assert_count 1, model.where(moot_condition).cohort({:origin => 'LAX', :dest => 'SFO'}, :priority => [:dest, :origin]).where(year_is_2009)
 
-      assert_count 0, model.where('9 = 9').cohort({:origin => 'LAX'}, :minimum_size => 2).where(year_is_2009)
-      assert_count 2, model.where('9 = 9').cohort({:origin => 'LAX', :dest => 'SFO'}, :minimum_size => 2).where(year_is_2009)
-
-
-      assert_count 1, model.where('9 = 9').cohort(:origin => 'LAX').where(year_is_2009)
-      assert_count 1, model.where('9 = 9').cohort(:origin => 'LAX', :dest => 'ORD').where(year_is_2009)
-
-      assert_count 1, model.where('9 = 9').cohort({:origin => 'LAX', :dest => 'ORD'}, :priority => [:origin, :dest]).where(year_is_2009)
-      assert_count 0, model.where('9 = 9').cohort({:origin => 'LAX', :dest => 'ORD'}, :priority => [:dest, :origin]).where(year_is_2009)
-
-      assert_count 0, model.where('9 = 9').cohort({:origin => 'LAX'}, :minimum_size => 2).where(year_is_2009)
-      assert_count 0, model.where('9 = 9').cohort({:origin => 'LAX', :dest => 'ORD'}, :minimum_size => 2).where(year_is_2009)
+      assert_count 0, model.where(moot_condition).cohort({:origin => 'LAX'}, :minimum_size => 2).where(year_is_2009)
+      assert_count 2, model.where(moot_condition).cohort({:origin => 'LAX', :dest => 'SFO'}, :minimum_size => 2).where(year_is_2009)
 
 
-      assert_count 1, model.where('9 = 9').cohort(:origin => 'ORD').where(year_is_2009)
-      assert_count 1, model.where('9 = 9').cohort(:origin => 'ORD', :dest => 'MSN').where(year_is_2009)
+      assert_count 1, model.where(moot_condition).cohort(:origin => 'LAX').where(year_is_2009)
+      assert_count 1, model.where(moot_condition).cohort(:origin => 'LAX', :dest => 'ORD').where(year_is_2009)
 
-      assert_count 1, model.where('9 = 9').cohort({:origin => 'ORD', :dest => 'MSN'}, :priority => [:origin, :dest]).where(year_is_2009)
-      assert_count 0, model.where('9 = 9').cohort({:origin => 'ORD', :dest => 'MSN'}, :priority => [:dest, :origin]).where(year_is_2009)
+      assert_count 1, model.where(moot_condition).cohort({:origin => 'LAX', :dest => 'ORD'}, :priority => [:origin, :dest]).where(year_is_2009)
+      assert_count 0, model.where(moot_condition).cohort({:origin => 'LAX', :dest => 'ORD'}, :priority => [:dest, :origin]).where(year_is_2009)
 
-      assert_count 0, model.where('9 = 9').cohort({:origin => 'ORD'}, :minimum_size => 2).where(year_is_2009)
-      assert_count 0, model.where('9 = 9').cohort({:origin => 'ORD', :dest => 'MSN'}, :minimum_size => 2).where(year_is_2009)
+      assert_count 0, model.where(moot_condition).cohort({:origin => 'LAX'}, :minimum_size => 2).where(year_is_2009)
+      assert_count 0, model.where(moot_condition).cohort({:origin => 'LAX', :dest => 'ORD'}, :minimum_size => 2).where(year_is_2009)
+
+
+      assert_count 1, model.where(moot_condition).cohort(:origin => 'ORD').where(year_is_2009)
+      assert_count 1, model.where(moot_condition).cohort(:origin => 'ORD', :dest => 'MSN').where(year_is_2009)
+
+      assert_count 1, model.where(moot_condition).cohort({:origin => 'ORD', :dest => 'MSN'}, :priority => [:origin, :dest]).where(year_is_2009)
+      assert_count 0, model.where(moot_condition).cohort({:origin => 'ORD', :dest => 'MSN'}, :priority => [:dest, :origin]).where(year_is_2009)
+
+      assert_count 0, model.where(moot_condition).cohort({:origin => 'ORD'}, :minimum_size => 2).where(year_is_2009)
+      assert_count 0, model.where(moot_condition).cohort({:origin => 'ORD', :dest => 'MSN'}, :minimum_size => 2).where(year_is_2009)
+    end
+
+    it "can get where sql" do
+      FactoryGirl.create(:lax_ord)
+      FactoryGirl.create(:lax_sfo)
+      model.cohort(:origin => 'LAX').where_sql.must_equal %{WHERE ("flights"."origin" = 'LAX')}
+    end
+
+    it "will resolve independently from other cohorts" do
+      FactoryGirl.create(:lax_ord)
+      FactoryGirl.create(:lax_sfo)
+      assert_count 0, model.cohort(:dest => 'SFO').cohort(:dest => 'ORD')
+    end
+
+    it "will resolve independently from other cohorts (complex example)" do
+      FactoryGirl.create(:lax_ord)
+      FactoryGirl.create(:lax_ord, :origin_city => 'Los Angeles', :airline => 'Delta')
+      FactoryGirl.create(:lax_sfo)
+      FactoryGirl.create(:lax_ord, :origin_city => 'Los Angeles', :airline => 'Delta', :year => 2000)
+      FactoryGirl.create(:lax_sfo, :year => 2000)
+      year_condition = f_t[:year].eq(2000)
+
+      # sanity check
+      assert_count 2, model.where(year_condition)
+      assert_count 2, model.cohort(:origin => 'LAX', :dest => 'SFO')
+      assert_count 2, model.cohort(:origin_city => 'Los Angeles', :airline => 'Delta')
+      
+      assert_count 1, model.cohort(:origin => 'LAX', :dest => 'SFO').where(year_condition)
+      assert_count 1, model.where(year_condition).cohort(:origin => 'LAX', :dest => 'SFO')
+      
+      assert_count 2, model.cohort({:origin => 'LAX', :dest => 'SFO'}, :minimum_size => 2).where(year_condition)
+      assert_count 2, model.where(year_condition).cohort({:origin => 'LAX', :dest => 'SFO'}, :minimum_size => 2)
+
+      assert_count 1, model.cohort(:origin_city => 'Los Angeles', :airline => 'Delta').where(year_condition)
+      assert_count 1, model.where(year_condition).cohort(:origin_city => 'Los Angeles', :airline => 'Delta')
+      
+      assert_count 1, model.cohort(:origin_city => 'Los Angeles', :airline => 'Delta').where(year_condition)
+      assert_count 1, model.where(year_condition).cohort(:origin_city => 'Los Angeles', :airline => 'Delta')
+      #--
+
+      assert_count 0, model.cohort(:origin => 'LAX', :dest => 'SFO').cohort(:origin_city => 'Los Angeles', :airline => 'Delta')
+      assert_count 0, model.cohort(:origin_city => 'Los Angeles', :airline => 'Delta').cohort(:origin => 'LAX', :dest => 'SFO')
+    end
+
+    describe "when used with UNION" do
+      before do
+        @ord = FactoryGirl.create(:lax_ord)
+        @sfo = FactoryGirl.create(:lax_sfo)
+      end
+
+      # sanity check!
+      it "has tests that use unions properly" do
+        ord = model.where(f_t[:dest].eq('ORD')).project(Arel.star)
+        sfo = model.where(f_t[:dest].eq('SFO')).project(Arel.star)
+        Flight.find_by_sql("SELECT * FROM #{ord.union(sfo).to_sql}").must_equal [@ord, @sfo]
+      end
+        
+      it "builds successful cohorts" do
+        ord = model.cohort(:dest => 'ORD').project(Arel.star)
+        sfo = model.cohort(:dest => 'SFO').project(Arel.star)
+        Flight.find_by_sql("SELECT * FROM #{ord.union(sfo).to_sql}").must_equal [@ord, @sfo]
+
+        msn = model.cohort(:origin => 'LAX', :dest => 'MSN').project(Arel.star)
+        lhr = model.cohort(:origin => 'LAX', :dest => 'LHR').project(Arel.star)
+        Flight.find_by_sql("SELECT * FROM #{msn.union(lhr).to_sql}").must_equal [@ord, @sfo]
+      end
+
+      it "doesn't somehow create unions with false positives" do
+        msn = model.cohort(:dest => 'MSN').project(Arel.star)
+        lhr = model.cohort(:dest => 'LHR').project(Arel.star)
+        ActiveRecord::Base.connection.select_value("SELECT COUNT(*) FROM #{msn.union(lhr).to_sql}").must_equal 0
+      end
+
+      it "builds unions where only one side has rows" do
+        msn = model.cohort(:dest => 'MSN').project(Arel.star)
+        ord = model.cohort(:dest => 'ORD').project(Arel.star)
+        Flight.find_by_sql("SELECT * FROM #{msn.union(ord).to_sql}").must_equal [@ord]
+      end
     end
   end
 end
 
 describe CohortAnalysis do
-  def assert_count(expected_count, cohort)
-    sql = cohort.project('COUNT(*)').to_sql
+  def assert_count(expected_count, relation)
+    relation = relation.clone
+    relation.projections = [Arel.sql('COUNT(*)')]
+    sql = relation.to_sql
     ActiveRecord::Base.connection.select_value(sql).must_equal expected_count
   end
-  def assert_constraint(expected_constraints, cohort)
-    table = cohort.source.left
-    if expected_constraints.is_a?(Hash)
-      expected_constraints = expected_constraints.map { |k, v| table[k].eq(v) }.inject(:and).to_sql
-    end
-    cohort.constraints.map(&:to_sql).must_equal [expected_constraints]
+
+  def assert_members(expected_members, relation)
+    relation = relation.clone
+    table = relation.source.left
+    relation.projections = [Arel.star]
+    actual_members = Flight.find_by_sql relation.to_sql
+    actual_members.map(&:id).sort.must_equal expected_members.map(&:id).sort
+  end
+
+  def f_t
+    Arel::Table.new(:flights)
   end
 
   describe 'ArelSelectManagerInstanceMethods' do
